add hero section with a photo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -50,7 +50,7 @@
             </li>
           </ul>
           <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search for " aria-label="Search">
+            <input class="form-control me-2" type="search" placeholder="Search for Anything" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
         </div>
@@ -59,7 +59,28 @@
   </header>
   <!-- HEADER END -->
 
-
+  <!-- HERO -->
+  <main>
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="themes.png" class="d-block mx-lg-auto img-fluid" alt="Themes" width="700" height="500"
+            loading="lazy">
+        </div>
+        <div class="col-lg-6">
+          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Elevate Your Business with Custom Web Pages</h1>
+          <p class="lead">Bring your brand to life online with our expert web design services. At PageCrafters, we
+            specialize in crafting bespoke web pages that capture the essence of your business, engage your audience,
+            and drive growth. Whether you're looking to launch a new site or revamp an existing one, our tailored
+            solutions are designed to meet your specific needs and exceed your expectations.</p>
+          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Get Started</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+  <!-- HERO END -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
