change navbar links

--- a/index.html
+++ b/index.html
@@ -34,13 +34,16 @@
             <li class="nav-item">
               <a class="nav-link" href="pages/pricing.html">Pricing</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/contact.html">Contact Us</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 More..
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Contact Us</a></li>
+                <li><a class="dropdown-item" href="#">FAQ</a></li>
                 <li><a class="dropdown-item" href="#">Read More</a></li>
                 <li>
                   <hr class="dropdown-divider">
@@ -51,7 +54,7 @@
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search for Anything" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn-outline-primary" type="submit">Search</button>
           </form>
         </div>
       </div>
@@ -74,7 +77,9 @@
             and drive growth. Whether you're looking to launch a new site or revamp an existing one, our tailored
             solutions are designed to meet your specific needs and exceed your expectations.</p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Get Started</button>
+            <a href="pages/pricing.html"><button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Get
+                Started</button></a>
+
           </div>
         </div>
       </div>
