--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -17,6 +17,15 @@
 </head>
 
 <body>
+  <!-- CHECK -->
+  <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+    <symbol id="check" viewBox="0 0 16 16">
+      <path
+        d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" />
+    </symbol>
+  </svg>
+  <!-- CHECK END -->
+
   <!-- HEADER -->
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -130,6 +139,121 @@
       </div>
     </div>
     <!-- PRICING END -->
+
+    <!-- TABLE -->
+    <div class="compare-header p-3 pb-md-4 mx-auto text-center">
+      <h1 class="display-6 fw-normal">Compare Plans</h1>
+    </div>
+
+    <div class="table-responsive">
+      <table class="table text-center">
+        <thead>
+          <tr>
+            <th style="width: 34%;"></th>
+            <th style="width: 22%;">Starter</th>
+            <th style="width: 22%;">Professional</th>
+            <th style="width: 22%;">Enterprise</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row" class="text-start">Number of Custom Pages</th>
+            <td><span class="bi" width="24" height="24">
+                1
+              </span></td>
+            <td><span class="bi" width="24" height="24">
+                Up to 5
+              </span></td>
+            <td><span class="bi" width="24" height="24">
+                Unlimited
+              </span></td>
+          </tr>
+          <tr>
+            <th scope="row" class="text-start">Regular Content Updates</th>
+            <td><span class="bi" width="24" height="24">
+                Monthly
+              </span></td>
+            <td><span class="bi" width="24" height="24">
+                Bi-weekly
+              </span></td>
+            <td><span class="bi" width="24" height="24">
+                Weekly
+              </span></td>
+          </tr>
+          <tr>
+            <th scope="row" class="text-start">Responsive Mobile Optimization</th>
+            <td><svg class="bi" width="24" height="24">
+                <use xlink:href="#check" />
+              </svg></td>
+            <td><svg class="bi" width="24" height="24">
+                <use xlink:href="#check" />
+              </svg></td>
+            <td><svg class="bi" width="24" height="24">
+                <use xlink:href="#check" />
+              </svg></td>
+          </tr>
+        </tbody>
+
+        <tbody>
+          <tr>
+            <th scope="row" class="text-start">Advanced SEO Management</th>
+            <td></td>
+            <td><svg class="bi" width="24" height="24">
+                <use xlink:href="#check" />
+              </svg></td>
+            <td><svg class="bi" width="24" height="24">
+                <use xlink:href="#check" />
+              </svg></td>
+          </tr>
+          <tr>
+            <th scope="row" class="text-start">Social Media Integration</th>
+            <td></td>
+            <td><svg class="bi" width="24" height="24">
+                <use xlink:href="#check" />
+              </svg></td>
+            <td><svg class="bi" width="24" height="24">
+                <use xlink:href="#check" />
+              </svg></td>
+          </tr>
+          <tr>
+            <th scope="row" class="text-start">Email Marketing Setup</th>
+            <td></td>
+            <td><svg class="bi" width="24" height="24">
+                <use xlink:href="#check" />
+              </svg></td>
+            <td><svg class="bi" width="24" height="24">
+                <use xlink:href="#check" />
+              </svg></td>
+          </tr>
+          <tr>
+            <th scope="row" class="text-start">E-commerce Integration</th>
+            <td></td>
+            <td></td>
+            <td><svg class="bi" width="24" height="24">
+                <use xlink:href="#check" />
+              </svg></td>
+          </tr>
+          <tr>
+            <th scope="row" class="text-start">Advanced Security Features</th>
+            <td></td>
+            <td></td>
+            <td><svg class="bi" width="24" height="24">
+                <use xlink:href="#check" />
+              </svg></td>
+          </tr>
+          <tr>
+            <th scope="row" class="text-start">Dedicated Account Manager</th>
+            <td></td>
+            <td></td>
+            <td><svg class="bi" width="24" height="24">
+                <use xlink:href="#check" />
+              </svg></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <!-- TABLE END -->
 
     <!-- FOOTER -->
     <div class="container">
