--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -30,7 +30,8 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container">
-        <a class="navbar-brand" href="#">PageCrafters</a>
+        <a class="navbar-brand" href="#"><img src="images/pagecrafters_logo.gif" alt="PageCrafters"
+            style="width: 200px;"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
