--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -14,6 +14,17 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Custom CSS -->
   <link rel="stylesheet" href="../styles/pricing.css">
+
+  <!-- Inline Styling -->
+  <style>
+    .pricing-container {
+      max-width: 960px;
+    }
+
+    .pricing-header {
+      max-width: 700px;
+    }
+  </style>
 </head>
 
 <body>
