--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
           <img src="images/themes.png" class="d-block mx-lg-auto img-fluid" alt="Themes" width="700" height="500"
-            loading="lazy">
+            loading="lazy" id="hero-image">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Elevate Your Business with Custom Web Pages</h1>
