--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -114,7 +114,7 @@
         </div>
       </div>
       <div class="col">
-        <div class="card mb-4 rounded-3 shadow-sm border-primary">
+        <div class="card mb-4 rounded-3 shadow-sm border-primary" id="professional-plan-card">
           <div class="card-header py-3 text-bg-primary border-primary">
             <h4 class="my-0 fw-normal">Professional Plan</h4>
           </div>
