--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <li class="nav-item">
               <a class="nav-link" href="pages/contact.html">Contact Us</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/register.html">Register</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
