--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -11,7 +11,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="../styles/pricing.css">
 
-  <!-- Inline Styling -->
+  <!-- Internal Styling -->
   <style>
     .pricing-container {
       max-width: 960px;
